--- a/miniprojectinput.html
+++ b/miniprojectinput.html
@@ -1,8 +1,12 @@
+<!DOCTYPE HTML>
 <html>
 	<body>
-		Results:<br><br>
-		First Name: <?php echo $_POST["firstName"]; ?><br>
-		Last Name: <?php echo $_POST["lastName"]; ?><br>
-		Email: <?php echo $_POST["email"]; ?>
+		<h>Sample Ontraport Mini Project:</h><br><br>
+		<form action="miniprojecho.php" method="post">
+			First Name: <input type="text" name="firstName"><br>
+			Last Name: <input type="text" name="lastName"><br>
+			Email: <input type="text" name="email"><br>
+			<input type="submit">
+		</form>
 	</body>
 </html>
