--- a/input_1.html
+++ b/input_1.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<h>Sample Ontraport Mini Project:</h><br><br>
-		<form action="action_page.php" method="post">
+		<form action="action_page_1.php" method="post">
 			First Name: <input type="text" name="firstName"><br>
 			Last Name: <input type="text" name="lastName"><br>
 			Email: <input type="text" name="email"><br>
