--- a/input.html
+++ b/input.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<body>
-		<h>Sample Ontraport Mini Project:</h><br><br>
-		<form action="action_page_2.php" method="post">
+		<h>Ontraport Mini Form Project:</h><br><br>
+		<form action="action_page.php" method="post">
 			First Name: <input type="text" name="firstName"><br>
 			Last Name: <input type="text" name="lastName"><br>
 			Email: <input type="text" name="email"><br>
