created admin / user inputs

--- a/input_user.html
+++ b/input_user.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<h>Ontraport Mini Form Project:</h><br><br>
-		<form action="action_page.php" method="post">
+		<form action="action_page_user.php" method="post">
 			First Name: <input type="text" name="firstName"><br>
 			Last Name: <input type="text" name="lastName"><br>
 			Email: <input type="text" name="email"><br>
