fixed some css formatting

--- a/input_user.html
+++ b/input_user.html
@@ -7,15 +7,15 @@
 			<ul>
 				<li>
 					<label for="firstName">First Name</label>
-					<input type="text" name="firstName" maxlength="40">
+					<input type="text" name="firstName" maxlength="40" required>
 				</li>
 				<li>
 					<label for="lastName">Last Name</label>
-					<input type="text" name="lastName" maxlength="40">
+					<input type="text" name="lastName" maxlength="40" required>
 				</li>
 				<li>
 					<label for="email">Email</label>
-					<input type="text" name="email" maxlength="40">
+					<input type="text" name="email" maxlength="40" required>
 				</li>
 			</ul>
 			<input type="submit" value="Enter User Info" id="btn_submit" align=center>
