created oop classes for mysql entry

--- a/input_user.html
+++ b/input_user.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="forminput.css">
 	<div class="form-style">
 		<form class="form-style" action="action_page_user.php" method="post">
-			<h1>Enter User Info:</h1>
+			<h1>Enter Contact Information:</h1>
 			<ul>
 				<li>
 					<label for="firstName">First Name</label>
@@ -18,7 +18,7 @@
 					<input type="text" name="email" maxlength="40" required>
 				</li>
 			</ul>
-			<input type="submit" value="Enter User Info" id="btn_submit" align=center>
+			<input type="submit" value="Create Contact" id="btn_submit" align=center>
 		</form>
 	</div>
 </html>
